--- a/app/templates/feedlot/pens/map_view.html
+++ b/app/templates/feedlot/pens/map_view.html
@@ -7,6 +7,7 @@
 <a href="{{ url_for('feedlot.list_pens', feedlot_id=feedlot._id) }}" class="px-4 py-2 hover:bg-teal rounded transition">Pens</a>
 <a href="{{ url_for('feedlot.list_batches', feedlot_id=feedlot._id) }}" class="px-4 py-2 hover:bg-teal rounded transition">Batches</a>
 <a href="{{ url_for('feedlot.list_cattle', feedlot_id=feedlot._id) }}" class="px-4 py-2 hover:bg-teal rounded transition">Cattle</a>
+<a href="{{ url_for('top_level.settings') }}" class="px-4 py-2 hover:bg-teal rounded transition">Settings</a>
 {% endblock %}
 
 {% block content %}
