updated source to funder

--- a/app/templates/feedlot/batches/view.html
+++ b/app/templates/feedlot/batches/view.html
@@ -20,8 +20,8 @@
                 <p class="font-semibold">{{ batch.induction_date | strftime }}</p>
             </div>
             <div>
-                <p class="text-sm text-gray-600">Source</p>
-                <p class="font-semibold">{{ batch.source }}</p>
+                <p class="text-sm text-gray-600">Funder</p>
+                <p class="font-semibold">{{ batch.funder }}</p>
             </div>
             {% if batch.notes %}
             <div>
