--- a/app/templates/feedlot/batches/list.html
+++ b/app/templates/feedlot/batches/list.html
@@ -43,7 +43,7 @@
             <tr>
                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Batch Number</th>
                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Induction Date</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Source</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Funder</th>
                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Cattle Count</th>
                 <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
             </tr>
@@ -53,7 +53,7 @@
             <tr class="hover:bg-gray-50">
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">{{ batch.batch_number }}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ batch.induction_date | strftime }}</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ batch.source }}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ batch.funder }}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm">
                     <span class="px-2 py-1 bg-teal bg-opacity-10 text-teal rounded-full text-xs font-semibold">
                         {{ batch.cattle_count }} cattle
