--- a/app/templates/feedlot/batches/list.html
+++ b/app/templates/feedlot/batches/list.html
@@ -11,16 +11,16 @@
         </div>
         {% block actions_dropdown %}
         <div class="relative inline-block text-left">
-            <button id="actions-dropdown-btn" type="button" class="inline-flex items-center justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal transition duration-200" aria-expanded="false" aria-haspopup="true">
+            <button id="actions-dropdown-btn" type="button" data-testid="batches-list-actions-dropdown-button" class="inline-flex items-center justify-center w-full rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal transition duration-200" aria-expanded="false" aria-haspopup="true">
                 <span>Actions</span>
                 <svg class="-mr-1 ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
                 </svg>
             </button>
-            <div id="actions-dropdown-menu" class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none z-50" role="menu" aria-orientation="vertical" aria-labelledby="actions-dropdown-btn">
+            <div id="actions-dropdown-menu" data-testid="batches-list-actions-dropdown-menu" class="hidden origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none z-50" role="menu" aria-orientation="vertical" aria-labelledby="actions-dropdown-btn">
                 <div class="py-1" role="none">
                     {% block actions_items %}
-                    <a href="{{ url_for('feedlot.create_batch', feedlot_id=feedlot._id) }}" role="menuitem">Create Batch</a>
+                    <a href="{{ url_for('feedlot.create_batch', feedlot_id=feedlot._id) }}" data-testid="create-batch-action" role="menuitem">Create Batch</a>
                     {% endblock %}
                 </div>
             </div>
@@ -42,7 +42,7 @@
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
             {% for batch in batches %}
-            <tr class="hover:bg-gray-50">
+            <tr class="hover:bg-gray-50" data-testid="batch-row-{{ batch._id }}">
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">{{ batch.batch_number }}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ batch.induction_date | strftime }}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-600">{{ batch.funder }}</td>
@@ -53,6 +53,7 @@
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm">
                     <a href="{{ url_for('feedlot.view_batch', feedlot_id=feedlot._id, batch_id=batch._id) }}" 
+                       data-testid="view-batch-link-{{ batch._id }}"
                        class="text-teal hover:opacity-80 mr-3">View</a>
                 </td>
             </tr>
@@ -63,7 +64,7 @@
 {% else %}
 <div class="bg-white rounded-lg shadow-md p-12 text-center">
     <p class="text-gray-600 text-lg mb-4">No batches found.</p>
-    <a href="{{ url_for('feedlot.create_batch', feedlot_id=feedlot._id) }}" class="inline-block bg-teal hover:opacity-90 text-white font-semibold py-3 px-6 rounded-lg transition duration-200">
+    <a href="{{ url_for('feedlot.create_batch', feedlot_id=feedlot._id) }}" data-testid="create-first-batch-button" class="inline-block bg-teal hover:opacity-90 text-white font-semibold py-3 px-6 rounded-lg transition duration-200">
         Create Your First Batch
     </a>
 </div>
